# waylib

./: .gitignore  CMakeLists.txt
cmake/: Helpers.cmake
examples/blur/: CMakeLists.txt
examples/outputcopy/: CMakeLists.txt
examples/outputviewport/: CMakeLists.txt
examples/surface-delegate/: CMakeLists.txt
examples/tinywl/: CMakeLists.txt
src/cmake/: pkgconfig.pc.in
src/server/: CMakeLists.txt
tests/manual/live/: CMakeLists.txt
